# task-cli-py

./: .gitignore  main.py  task_cli.py  test.py  test_task_cli.py
TaskCLI/: TaskCLI.sln
TaskCLI/src/TaskCLI/: Program.cs  TaskManager.cs
TaskCLI/tests/TaskCLITests/: TaskCLITests.csproj  TaskManagerTests.cs
cpp/: CMakeLists.txt  Makefile  task_cli.cpp  task_cli.hpp  test_task_cli.cpp
javascript/: taskManager.js  taskManager.test.js
